2009-01-30  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/38937
	* tree-ssa-structalias.c (do_sd_constraint): Do not shortcut
	computing the transitive closure.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@143819 138bc75d-0d04-0410-961f-82ee72b054a4